--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
         <p>My heart beats only for you! 💓</p>
         <p>You're my everything! ✨</p>
         <p>Forever and Always! ♾️</p>
-        <p style="font-size: 2.5em; margin: 25px 0;">💏 👩‍❤️‍👨 💑</p>
+        <p style="font-size: 2.5em; margin: 25px 0;">👩‍❤️‍👨 🌸 💑</p>
         <button class="close-popup" id="closeBtn">Close 💖</button>
     </div>
 
